<resources>
    <string name="app_name">bsatahalk</string>
    <string name="facebook_app_id"> 219570838617427</string>
    <string name="google_server_client_id">365883672510-gp7h49ke9vi9mn8on42g4lniquj8jfp6.apps.googleusercontent.com</string>
    <string name="google_client_sercet">4QjdJxtEfshV091nBnNTXg9s</string>
    <string name="facebook_login_protocol_scheme">fb219570838617427</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgetPass">Forget Password !</string>
    <string name="newUser">New User</string>
    <string name="OR">OR</string>
    <string name="sign_up">Registration</string>
    <string name="userName">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="toast_ensure_data">Ensure you fill all data without error</string>
    <string name="email_not_found">Email not Found</string>
    <string name="enter_your_email">Please Enter Your Email</string>
    <string name="error_email">Write correct Email</string>
    <string name="error_confirm_password">Password Not Matched</string>
    <string name="Dialog_please_wait">please wait…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fakeName">your name</string>
    <string name="nav_Home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_aboutUs">About us</string>
    <string name="nav_logOut">Log out</string>
    <string name="logout">Logout !</string>
    <string name="sureLogout">are you sure you want to logout?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="deny_perrmission_read_photo">Error While load photo</string>
    <string name="confirm_exit_message">please click back again to exit application</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="fake_email">example@email.com</string>
    <string name="try_again">Try Again</string>
    <string name="change_password">Change Password</string>
    <string name="editProfile">Edit Profile</string>
    <string name="classes_title">Classes</string>


    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="sixth">Sixth</string>

    <string name="primary_level">Primary Level</string>
    <string name="inter_level">Intermediate Level</string>
    <string name="high_level">High Level</string>

    <string name="serial">Serial</string>
    <string name="calss_serial">Class Serial</string>
    <string name="school_classes">School Classes</string>
    <string name="no_year">not available</string>

    <string name="success">Success</string>
    <string name="top_ten_list">Work Hard</string>
    <string name="no_student">No Student, Work Hard to be the First One</string>
    <string name="points">Points</string>
    <string name="topTen">Top Ten</string>


    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="lesson_name">Lesson Name</string>
    <string name="lesson">Lesson</string>
    <string name="understand">Understand</string>
    <string name="not_understand">Not understand</string>
    <string name="no_lesson">No Lesson Available</string>

    <string name="not_valid_email">this email is already found</string>
    <string name="invalid_email_or_pass">invalid email or password</string>
    <string name="quiz_number">Quizzes:</string>
    <string name="ratedSuccessfully">Rated Successfully</string>
    <string name="number_quizes">Quizes Number:</string>
    <string name="total_degree">Total Degree:</string>
    <string name="emlaa_grammer">Dictation rules</string>
    <string name="error_fb_login">Error while login</string>
    <string name="quize_title">Quiz</string>
    <string name="no_quizes">no quizzes available</string>
    <string name="check">Check</string>
    <string name="total_score">Total Score</string>
    <string name="al_e3rab">الإعراب</string>
    <string name="al_7arka">علامة الإعراب</string>

    <string name="shared_success">share successful</string>
    <string name="shared_cencel">share cancel !</string>
    <string name="for_more">for more</string>
    <string name="share_fb">Share on Facebook</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="sice">Since</string>
    <string name="notificationTitle">Notification</string>
    <string name="no_notification">No Notification</string>
    <string name="more_than_99">+99</string>
    <string name="questions">Questions</string>
    <string name="question">Question</string>
    <string name="quiz_list">Quiz List</string>
    <string name="answer_all_item">Insure you answer all item</string>
    <string name="press_to_display_ans">Press on each item to view answer</string>
    <string name="question_list_top">Go ahead and answer all questions</string>
    <string name="no_lesson_category">No Lesson for this category</string>
    <string name="push_notification">Activate Notification</string>
    <string name="ask_notification_push">Are you want to activate lesson update notification?</string>
    <string name="your_mark">This question mark is</string>
    <string name="mark">mark</string>
    <string name="the_mark">The mark:</string>
    <string name="quiz_mark">total mark is</string>
    <string name="send_mark">Send</string>
    <string name="question_answer_befor">This question answered before</string>
    <string name="year">Class</string>
    <string name="select_class">Select Class</string>
    <string name="timeOut">Time Out</string>
    <string name="selected_word">Selected word</string>
    <string name="daplicate_answer">Daplicated Answer</string>
    <string name="loading">loading</string>
    <string name="no_quiz">No Quiz Available</string>
    <string name="enter_your_message">Enter your Message...</string>
    <string name="contact_us">Contact us</string>
    <string name="send">Send</string>
    <string name="about_app">About Bsatahalk !!</string>
    <string name="about_app_title">About Bsatahalk</string>
    <string name="how_use_app">How useBsatahalk</string>
    <string name="basathalk_app">Bsatahalk Application</string>
    <string name="have_question">have question</string>
    <string name="how_solve_quiz">how solve earaab question</string>
    <string name="way_solve_e3rab_question">Way to Solve Earab Question</string>
    <string name="solve_e3rab_question_descreption">سؤال الإعراب مكون من خانتين: الخانة الأولى للإعراب فقط, و الخانة الثانية للعلامة الإعرابية</string>
    <string name="for_example">على سبيل المثال</string>
    <string name="top_student">Top Student</string>
    <string name="All_questions">All questions</string>
    <string name="No_Question">no question</string>
    <string name="nav_Quesiotn">All questions</string>
    <string name="answer">Teacher Answer</string>
    <string name="answer_teacher">Teacher Response</string>

    <string name="grammer">Grammer</string>
    <string name="close">Close</string>
    <string name="are_you_sure"> are you sure from your answer</string>
    <string name="lesson_material">Lesson Materials</string>
    <string name="conclusion">Conclusion</string>
    <string name="Description">Description</string>
    <string name="no_conclusion">No Conclusion Available</string>
    <string name="semester">Semester</string>
    <string name="display">Display</string>
    <string name="select_semster">Select Semester</string>
    <string name="choose">Choose</string>
    <string name="e3rab">إعراب</string>
    <string name="est5rag">استخراج</string>
    <string name="page">Page</string>
    <string name="add_photo">From Camera</string>
    <string name="used_email">this email is already found</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="do_not_have_account">Do not have an account  ? </string>
    <string name="no_exist">Not Exist</string>
    <string name="password_not_matched">Password not Matched</string>
    <string name="new_password">New Password</string>
    <string name="conf_new_password">Confirem New Password</string>
    <string name="old_password">old password</string>
    <string name="app_description">بسطتهالك واحد من أفضل تطبيقات تعلم اللغة العربية, التطبيق خصص لمن يجد صعوبة في تعلماللغة العربية و خصوصا غير الناطقين بها فهو يسهل عليك تعلم الحروف الأبجديةوالهجائية و الإملاء و قواعد اللغة العربية بطريقة سهلةومبسطه, وذلك من خلال توفير الفيديوهات و التي ستجعلك تشعر أنك أمام معلمك تتفاعل معه و يتفاعل معك تسأله و يجيب... </string>
    <string name="app_description1"> وبعد الإنتهاء من الشرح ستجد الإمتحانات المدعمة بطريقة الإجابة عليها لتسهلعليك تماما ماستفعله, و هذا لتقيس المستوى الذي وصلت اليه باستمرارو تعلم ماهي نقاط ضعفك في اللغة و تقويها من خلال فيديوهات الشرح</string>
    <string name="start">Start</string>
    <string name="courses_and_first">lessons and top ten</string>
    <string name="how_us">how are us</string>
    <string name="waiting_teacher_ans">Waiting teacher answer ...</string>

</resources>
