<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_Home"
            android:icon="@drawable/home"/>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile"
            android:icon="@drawable/profile"/>
        <item
            android:id="@+id/nav_questions"
            android:title="@string/nav_Quesiotn"
            android:icon="@drawable/ic_action_name"/>


        <item
            android:id="@+id/nav_serila"
            android:title="@string/serial"
            android:icon="@drawable/serial"/>
        <item
            android:id="@+id/nav_emla2Serila"
            android:title="@string/emlaa_grammer"
            android:icon="@drawable/contract"/>
        <item
            android:id="@+id/nav_class"
            android:title="@string/classes_title"
            android:icon="@drawable/answer"/>
        <item
            android:id="@+id/nav_contactUs"
            android:title="@string/contact_us"
            android:icon="@drawable/support"/>
        <item
            android:id="@+id/nav_aboutUs"
            android:title="@string/nav_aboutUs"
            android:icon="@drawable/about_us"/>


    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/nav_logOut"/>
        </menu>
    </item>

</menu>