<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/home_header"></LinearLayout>

    <LinearLayout
        android:id="@+id/CategoryActivity_LinearLayout_NetworkFailed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:layout_marginTop="@dimen/xxx_large_margin"
            android:background="@drawable/rounded_shape_txtview"
            android:gravity="center"
            android:padding="@dimen/small_padding"
            android:text="@string/no_internet"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/CategoryActivity_btn_refreshConnection"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/btn_login_shape"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tiny_margin"
        android:gravity="center"
        android:text="@string/select_semster"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/medium_text_size" />

    <RadioGroup
        android:id="@+id/CategoryActivity_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/CategoryActivity_radioBtn_first"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:checked="true"
            android:text="@string/first" />

        <RadioButton
            android:id="@+id/CategoryActivity_radioBtn_second"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:text="@string/second" />


    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/small_margin"
        android:background="@color/gray_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"

        android:gravity="center"
        android:text="@string/select_class"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/medium_text_size" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/CategoryActivity_swipRefresh_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/CategoryActivity_Recycler_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.victor.loading.rotate.RotateLoading
                android:id="@+id/CategoryActivity_RotateLoading_loading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                app:loading_color="@color/colorPrimary"
                app:loading_width="2dp" />
        </FrameLayout>


    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>