<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tec77.bsatahalk.view.ChangePasswordActvity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/ChangePassActivity_Toolbar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="top"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/ChangePassActivity_TextView_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/medium_margin"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/large_text_size"
                tools:ignore="RtlCompat" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/home_header"></LinearLayout>

    <LinearLayout
        android:id="@+id/ChangePassActivity_LinearLayout_NetworkFailed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:layout_marginTop="@dimen/xxx_large_margin"
            android:background="@drawable/rounded_shape_txtview"
            android:gravity="center"
            android:padding="@dimen/small_padding"
            android:text="@string/no_internet"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/ChangePassActivity_btn_refreshConnection"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/btn_login_shape"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ChangePassActivity_EditText_oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            android:layout_marginTop="@dimen/tiny_margin"
            android:ems="10"
            android:hint="@string/old_password"
            android:padding="@dimen/small_padding"
            android:textColorHint="@color/blackColorLight" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled ="true">

        <EditText
            android:id="@+id/ChangePassActivity_EditText_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            android:layout_marginTop="@dimen/tiny_margin"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="@dimen/small_padding"
            android:textColorHint="@color/blackColorLight" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/ChangePassActivity_EditText_confNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            android:layout_marginTop="@dimen/tiny_margin"
            android:ems="10"
            android:hint="@string/conf_new_password"
            android:inputType="textPassword"
            android:padding="@dimen/small_padding"
            android:textColorHint="@color/blackColorLight" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/ChangePassActivity_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_marginTop="@dimen/xx_large_margin"
        android:background="@color/colorPrimary"
        android:paddingHorizontal="@dimen/medium_padding"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/whiteColor"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
