<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tec77.bsatahalk.view.activity.LessonQuestionActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/LessonQuestionActivity_Toolbar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="top"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/LessonQuestionActivity_TextView_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/medium_margin"
                android:gravity="center"
                android:text="@string/contact_us"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/large_text_size"
                tools:ignore="RtlCompat" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/home_header"></LinearLayout>

        <LinearLayout
            android:id="@+id/LessonQuestionActivity_LinearLayout_NetworkFailed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/rounded_shape_txtview"
                android:layout_marginTop="@dimen/xxx_large_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:text="@string/no_internet"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/LessonQuestionActivity_btn_refreshConnection"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_margin"
                android:background="@drawable/btn_login_shape"
                android:text="@string/try_again"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor" />
        </LinearLayout>
        <EditText
            android:id="@+id/LessonQuestionActivity_TextView_message"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="top"
            android:layout_margin="@dimen/small_margin"
            android:padding="@dimen/small_padding"
            android:hint="@string/enter_your_message"
            android:background="@drawable/rounded_shape_txtview"/>

        <Button
            android:id="@+id/LessonQuestionActivity_btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginLeft="@dimen/xxx_large_margin"
            android:layout_marginRight="@dimen/xxx_large_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/btn_login_shape"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>