<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tec77.bsatahalk.view.activity.SplashActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:padding="@dimen/large_padding"
                android:src="@drawable/logo_" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:paddingTop="@dimen/small_padding"
                android:text="@string/app_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/app_description1" />

            <Button
                android:id="@+id/SplashActivity_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="@dimen/xx_large_margin"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text_size"
                android:background="@color/colorPrimary" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
