<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tec77.bsatahalk.view.fragment.TopTenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/home_header" />

    <LinearLayout
        android:id="@+id/TopTenFragment_LinearLayout_NetworkFailed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/rounded_shape_txtview"
            android:layout_marginTop="@dimen/xxx_large_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:layout_marginLeft="@dimen/medium_margin"
            android:text="@string/no_internet"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/TopTenFragment_btn_refreshConnection"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/btn_login_shape"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor" />
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/tiny_margin"
            android:layout_marginRight="@dimen/tiny_margin"
            android:layout_marginTop="@dimen/tiny_margin"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray_light" />

            <TextView
                android:id="@+id/TopTenFragment_TextView_topTenTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/tiny_margin"
                android:layout_marginLeft="@dimen/tiny_margin"
                android:text="@string/topTen"
                android:textColor="@color/blackColor"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray_light" />

        </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/TopTenFragment_SwipeRefreshLayout_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <FrameLayout
        android:id="@+id/TopTenFragment_frameLayout_contnent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TopTenFragment_TextView_noStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_margin"
            android:background="@drawable/rounded_shape_txtview"
            android:gravity="center"
            android:padding="@dimen/large_padding"
            android:text="@string/no_student"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/TopTenFragment_RecyclerView_topTenStudents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.victor.loading.rotate.RotateLoading
            android:id="@+id/TopTenFragment_RotateLoading_loading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/tiny_margin"
            app:loading_color="@color/colorPrimary"
            app:loading_width="2dp" />

    </FrameLayout>

</android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
